neural_network py ok

--- a/rede_neural_all.ipynb
+++ b/rede_neural_all.ipynb
@@ -335,9 +335,7 @@
         "seed_number = 2024\n",
         "random.seed(seed_number)\n",
         "np.random.seed(seed_number)\n",
-        "tf.random.set_seed(seed_number)\n",
-        "\n",
-        "\n"
+        "tf.random.set_seed(seed_number)"
       ]
     },
     {
